python/testData/highlighting/asyncModuleBuiltinMethods.py
<error descr="function \"__getattr__\" cannot be async">async</error> def __getattr__(name):
    pass


<error descr="function \"__dir__\" cannot be async">async</error> def __dir__():
    pass